--- a/change_CSV_delimiter/csv_delimiter_converter.ipynb
+++ b/change_CSV_delimiter/csv_delimiter_converter.ipynb
@@ -3,7 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,7 +15,7 @@
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
-        "2e943eef075141308918c30de1c1a8eb": {
+        "c1b350a6df04434a8a08bc27b3353522": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "FileUploadModel",
           "model_module_version": "1.5.0",
@@ -38,20 +39,20 @@
             "disabled": false,
             "error": "",
             "icon": "upload",
-            "layout": "IPY_MODEL_4d70bc32290a4cceac45f93d36d5ddfb",
+            "layout": "IPY_MODEL_3f95304719034c4d9a7a22f39a4b577b",
             "metadata": [
               {
-                "name": "Dissident_Gender-categorized-data.csv",
+                "name": "Water Collection Data.csv",
                 "type": "text/csv",
-                "size": 166389,
-                "lastModified": 1732691247898
+                "size": 1699,
+                "lastModified": 1742813394769
               }
             ],
             "multiple": true,
-            "style": "IPY_MODEL_2a74650cde1943289f17945ff18ed82e"
+            "style": "IPY_MODEL_1280cb799ce2465a97629922f352f108"
           }
         },
-        "4d70bc32290a4cceac45f93d36d5ddfb": {
+        "3f95304719034c4d9a7a22f39a4b577b": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -103,7 +104,7 @@
             "width": null
           }
         },
-        "2a74650cde1943289f17945ff18ed82e": {
+        "1280cb799ce2465a97629922f352f108": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "ButtonStyleModel",
           "model_module_version": "1.5.0",
@@ -123,6 +124,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/CSUC/RDR-scripts/blob/main/change_CSV_delimiter/csv_delimiter_converter.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -201,7 +212,7 @@
         "    for uploaded_file in uploaded_files:\n",
         "        file_content = uploaded_file['content'].decode('utf-8', errors='replace')  # Decode with UTF-8\n",
         "        original_filename = uploaded_file['metadata']['name']\n",
-        "        new_filename = os.path.splitext(original_filename)[0] + '_new.csv'\n",
+        "        new_filename = os.path.splitext(original_filename)[0] + '.csv'\n",
         "\n",
         "        # Process the CSV content\n",
         "        processed_csv_content = process_csv(file_content)\n",
@@ -228,18 +239,18 @@
       "metadata": {
         "id": "oNkotb_xOPK-",
         "cellView": "form",
-        "outputId": "90d6a5ad-2f01-44f9-8d66-eb0763a15a41",
+        "outputId": "7f2d7851-0c37-41f6-c3fb-6a76b1bbded4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 17,
           "referenced_widgets": [
-            "2e943eef075141308918c30de1c1a8eb",
-            "4d70bc32290a4cceac45f93d36d5ddfb",
-            "2a74650cde1943289f17945ff18ed82e"
+            "c1b350a6df04434a8a08bc27b3353522",
+            "3f95304719034c4d9a7a22f39a4b577b",
+            "1280cb799ce2465a97629922f352f108"
           ]
         }
       },
-      "execution_count": 1,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "display_data",
@@ -300,7 +311,7 @@
               "<IPython.core.display.Javascript object>"
             ],
             "application/javascript": [
-              "download(\"download_d41f2eb9-a00f-409b-a075-32fce380f770\", \"processed_csv_files.zip\", 2984)"
+              "download(\"download_af36714f-9e5f-495f-882a-d4b19afc1499\", \"processed_csv_files.zip\", 1782)"
             ]
           },
           "metadata": {}
