--- a/change_CSV_delimiter/csv_delimiter_converter.ipynb
+++ b/change_CSV_delimiter/csv_delimiter_converter.ipynb
@@ -12,115 +12,6 @@
     },
     "language_info": {
       "name": "python"
-    },
-    "widgets": {
-      "application/vnd.jupyter.widget-state+json": {
-        "c1b350a6df04434a8a08bc27b3353522": {
-          "model_module": "@jupyter-widgets/controls",
-          "model_name": "FileUploadModel",
-          "model_module_version": "1.5.0",
-          "state": {
-            "_counter": 1,
-            "_dom_classes": [],
-            "_model_module": "@jupyter-widgets/controls",
-            "_model_module_version": "1.5.0",
-            "_model_name": "FileUploadModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/controls",
-            "_view_module_version": "1.5.0",
-            "_view_name": "FileUploadView",
-            "accept": ".csv",
-            "button_style": "",
-            "data": [
-              null
-            ],
-            "description": "Upload",
-            "description_tooltip": null,
-            "disabled": false,
-            "error": "",
-            "icon": "upload",
-            "layout": "IPY_MODEL_3f95304719034c4d9a7a22f39a4b577b",
-            "metadata": [
-              {
-                "name": "Water Collection Data.csv",
-                "type": "text/csv",
-                "size": 1699,
-                "lastModified": 1742813394769
-              }
-            ],
-            "multiple": true,
-            "style": "IPY_MODEL_1280cb799ce2465a97629922f352f108"
-          }
-        },
-        "3f95304719034c4d9a7a22f39a4b577b": {
-          "model_module": "@jupyter-widgets/base",
-          "model_name": "LayoutModel",
-          "model_module_version": "1.2.0",
-          "state": {
-            "_model_module": "@jupyter-widgets/base",
-            "_model_module_version": "1.2.0",
-            "_model_name": "LayoutModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/base",
-            "_view_module_version": "1.2.0",
-            "_view_name": "LayoutView",
-            "align_content": null,
-            "align_items": null,
-            "align_self": null,
-            "border": null,
-            "bottom": null,
-            "display": null,
-            "flex": null,
-            "flex_flow": null,
-            "grid_area": null,
-            "grid_auto_columns": null,
-            "grid_auto_flow": null,
-            "grid_auto_rows": null,
-            "grid_column": null,
-            "grid_gap": null,
-            "grid_row": null,
-            "grid_template_areas": null,
-            "grid_template_columns": null,
-            "grid_template_rows": null,
-            "height": null,
-            "justify_content": null,
-            "justify_items": null,
-            "left": null,
-            "margin": null,
-            "max_height": null,
-            "max_width": null,
-            "min_height": null,
-            "min_width": null,
-            "object_fit": null,
-            "object_position": null,
-            "order": null,
-            "overflow": null,
-            "overflow_x": null,
-            "overflow_y": null,
-            "padding": null,
-            "right": null,
-            "top": null,
-            "visibility": null,
-            "width": null
-          }
-        },
-        "1280cb799ce2465a97629922f352f108": {
-          "model_module": "@jupyter-widgets/controls",
-          "model_name": "ButtonStyleModel",
-          "model_module_version": "1.5.0",
-          "state": {
-            "_model_module": "@jupyter-widgets/controls",
-            "_model_module_version": "1.5.0",
-            "_model_name": "ButtonStyleModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/base",
-            "_view_module_version": "1.2.0",
-            "_view_name": "StyleView",
-            "button_color": null,
-            "font_weight": ""
-          }
-        }
-      }
     }
   },
   "cells": [
@@ -137,43 +28,20 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#Change semicolon delimiter to comma"
+        "#Change semicolon delimiter to comma\n",
+        "### OBSERVATION:\n",
+        "If you have doubts about the code, contact rdr-contacte@csuc.cat\n",
+        "### PURPOSE OF THE SCRIPT\n",
+        "The main purpose of this script is to transform the semicolon delimiter of CSV files to comma."
       ],
       "metadata": {
         "id": "C1ixXEKXFcGe"
       }
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "NOTE: If you have any questions about the code, please contact rdr-contacte@csuc.cat"
-      ],
-      "metadata": {
-        "id": "9Wi0YLU1Fri0"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "## PURPOSE OF THE SCRIPT"
-      ],
-      "metadata": {
-        "id": "HGy0MwECInHt"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "The main purpose of this script is to transform the semicolon delimiter of CSV files to comma."
-      ],
-      "metadata": {
-        "id": "KJdn_tfjInsC"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
-        "# @title Upload the CSV files\n",
+        "# @title First click the &#x25B6; button to execute the script. </p> Then clic the <strong>'Upload'</strong> button to upload the CSV files. </p>\n",
         "import os\n",
         "import csv\n",
         "import shutil\n",
@@ -238,85 +106,10 @@
       ],
       "metadata": {
         "id": "oNkotb_xOPK-",
-        "cellView": "form",
-        "outputId": "7f2d7851-0c37-41f6-c3fb-6a76b1bbded4",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 17,
-          "referenced_widgets": [
-            "c1b350a6df04434a8a08bc27b3353522",
-            "3f95304719034c4d9a7a22f39a4b577b",
-            "1280cb799ce2465a97629922f352f108"
-          ]
-        }
+        "cellView": "form"
       },
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "<IPython.core.display.Javascript object>"
-            ],
-            "application/javascript": [
-              "\n",
-              "    async function download(id, filename, size) {\n",
-              "      if (!google.colab.kernel.accessAllowed) {\n",
-              "        return;\n",
-              "      }\n",
-              "      const div = document.createElement('div');\n",
-              "      const label = document.createElement('label');\n",
-              "      label.textContent = `Downloading \"${filename}\": `;\n",
-              "      div.appendChild(label);\n",
-              "      const progress = document.createElement('progress');\n",
-              "      progress.max = size;\n",
-              "      div.appendChild(progress);\n",
-              "      document.body.appendChild(div);\n",
-              "\n",
-              "      const buffers = [];\n",
-              "      let downloaded = 0;\n",
-              "\n",
-              "      const channel = await google.colab.kernel.comms.open(id);\n",
-              "      // Send a message to notify the kernel that we're ready.\n",
-              "      channel.send({})\n",
-              "\n",
-              "      for await (const message of channel.messages) {\n",
-              "        // Send a message to notify the kernel that we're ready.\n",
-              "        channel.send({})\n",
-              "        if (message.buffers) {\n",
-              "          for (const buffer of message.buffers) {\n",
-              "            buffers.push(buffer);\n",
-              "            downloaded += buffer.byteLength;\n",
-              "            progress.value = downloaded;\n",
-              "          }\n",
-              "        }\n",
-              "      }\n",
-              "      const blob = new Blob(buffers, {type: 'application/binary'});\n",
-              "      const a = document.createElement('a');\n",
-              "      a.href = window.URL.createObjectURL(blob);\n",
-              "      a.download = filename;\n",
-              "      div.appendChild(a);\n",
-              "      a.click();\n",
-              "      div.remove();\n",
-              "    }\n",
-              "  "
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "<IPython.core.display.Javascript object>"
-            ],
-            "application/javascript": [
-              "download(\"download_af36714f-9e5f-495f-882a-d4b19afc1499\", \"processed_csv_files.zip\", 1782)"
-            ]
-          },
-          "metadata": {}
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
