--- a/create_Readme/create_Readme_script.ipynb
+++ b/create_Readme/create_Readme_script.ipynb
@@ -18,9 +18,9 @@
       "source": [
         "# Creating README.txt\n",
         "### OBSERVATION:\n",
-        "If you have doubts about the code, contact rdr-contacte@csuc.cat\n",
+        "If you have doubts about the code, please contact rdr-contacte@csuc.cat\n",
         "\n",
-        "### SCRIPT OBJECTIVE\n",
+        "### SCRIPT OBJECTIVE:\n",
         "The main objective of this script is to automatically create the README file for a dataset.\n"
       ]
     },
