--- a/dataset_size_calculator/dataset_size_calculator.ipynb
+++ b/dataset_size_calculator/dataset_size_calculator.ipynb
@@ -13,11 +13,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### Script per extreure les mides dels datasets d'una instància\n",
-        "# OBSERVACIÓ:\n",
-        "Si teniu dubtes sobre el codi, poseu-vos en contacte amb rdr-contacte@csuc.cat\n",
-        "## OBJECTIU DE L'SCRIPT\n",
-        "Aquest script permet calcular la mida total dels conjunt de dades (datasets) allotjat a una instància del Repositori de Dades de Recerca (https://dataverse.csuc.cat/). Utilitza l'API de Dataverse per obtenir la mida de tots els fitxers associats als datasets d'una instància i retorna la mida total en bytes, KB, MB o GB.\n"
+        "# Script to Calculate Datasets Size of dataverses in Dataverse\n",
+        "### OBSERVATION:\n",
+        "If you have doubts about the code, please contact rdr-contacte@csuc.cat\n",
+        "### SCRIPT OBJECTIVE:\n",
+        "This script calculates the total size of a datasets hosted in a dataverse in the Research Data Repository (https://dataverse.csuc.cat/). It uses the Dataverse API to retrieve the size of all files associated with all datasets of a dataverse and returns the total size in bytes, KB, MB, or GB.\n"
       ],
       "metadata": {
         "id": "gyMLbpUS8gWw"
@@ -32,7 +32,7 @@
       },
       "outputs": [],
       "source": [
-        "# @title Feu clic al botó Executar &#x25B6; , ompliu el token i trieu les institucions i les metadades\n",
+        "# @title First click the &#x25B6; button to execute the script. </p> Then, enter the token (If you don't have your API token, you can get it from the following link <a href='https://dataverse.csuc.cat/dataverseuser.xhtml?selectTab=apiTokenTab' target='_blank'>Get API Token</a>).</p> Finally choose one or more institutions.\n",
         "import os\n",
         "import subprocess\n",
         "import sys\n",
@@ -49,6 +49,7 @@
         "    # Install the required libraries\n",
         "    subprocess.check_call([sys.executable, \"-m\", \"pip\", \"install\", \"pyDataverse\", \"-q\"])\n",
         "    subprocess.check_call([sys.executable, \"-m\", \"pip\", \"install\", \"requests\", \"-q\"])\n",
+        "    subprocess.check_call([sys.executable, \"-m\", \"pip\", \"install\", \"html2text\", \"-q\"])\n",
         "\n",
         "    print(\"Libraries have been downloaded or updated.\")\n",
         "\n",
@@ -210,13 +211,9 @@
         "logging.basicConfig(level=logging.INFO)\n",
         "logger = logging.getLogger(__name__)\n",
         "\n",
-        "# Ask the user if they need an API token, if so, provide a link\n",
-        "\n",
-        "display(HTML(\"<p style='font-size:14px;'>If you don't have your API token, you can get it from the following link: <a href='https://dataverse.csuc.cat/dataverseuser.xhtml?selectTab=apiTokenTab' target='_blank'>Get API Token</a></p>\"))\n",
-        "\n",
         "\n",
         "# Once they have the token, ask for it\n",
-        "token = input(\"Introduïu el vostre token i premeu enter: \")\n",
+        "token = input(\"Please enter your API token: \")\n",
         "\n",
         "# Use the token in your configuration\n",
         "config = Config(api_url=\"https://dataverse.csuc.cat/\", logger=logger, token=token)\n",
@@ -231,18 +228,18 @@
         "    'ISGLOBAL', 'VHIR'\n",
         "]\n",
         "# Add an option for selecting all\n",
-        "options_institucions = ['Totes les institucions'] + institucions\n",
+        "options_institucions = ['All institutions'] + institucions\n",
         "\n",
         "# Create widgets for instructions and selections\n",
         "instruction_text_institucions = widgets.HTML(\n",
-        "    value=\"<b>Trieu una o més institucions:</b>\"\n",
+        "    value=\"<b>Choose one or more institutions:</b>\"\n",
         ")\n",
         "\n",
         "# Create the widget for multiple selection of institutions\n",
         "institucions_widget = widgets.SelectMultiple(\n",
         "    options=options_institucions,\n",
         "    value=[],\n",
-        "    description='Institucions:',\n",
+        "    description='Institutions:',\n",
         "    disabled=False\n",
         ")\n",
         "# Function to save selected institutions and print them\n",
@@ -251,25 +248,25 @@
         "    global opcions\n",
         "    selected = set(change['new'])\n",
         "\n",
-        "    if 'Totes les institucions' in selected:\n",
+        "    if 'All institutions' in selected:\n",
         "        opcions = set(institucions)  # Select all institutions if 'Totes les institucions' is chosen\n",
         "    else:\n",
         "        opcions.update(selected)  # Update the set with new selections\n",
         "\n",
-        "    print(f\"Institucions: {list(opcions)}\")\n",
+        "    print(f\"Institutions: {list(opcions)}\")\n",
         "\n",
         "# Function to clear the selection and reset the institutions widget\n",
         "def restart_selection_institucions(button):\n",
         "    global opcions\n",
         "    institucions_widget.value = []  # Clear the selections in the widget\n",
         "    opcions.clear()  # Clear the global opcions set\n",
-        "    print(\"La selecció de la institució s'ha restablert.\")\n",
+        "    print(\"The institution selection has been restored.\")\n",
         "\n",
         "# Observe changes in the widget selection for institutions\n",
         "institucions_widget.observe(save_selection_institucions, names='value')\n",
         "\n",
         "# Create a button to restart the selection for institutions\n",
-        "restart_button_institucions = widgets.Button(description=\"Reiniciar la selecció d'institucions\")\n",
+        "restart_button_institucions = widgets.Button(description=\"Reset institution selection\")\n",
         "restart_button_institucions.on_click(restart_selection_institucions)\n",
         "\n",
         "# Display the widgets and button with instructions\n",
@@ -286,7 +283,7 @@
       },
       "outputs": [],
       "source": [
-        "# @title Un cop escollides les institucions, ciqueu el botó &#x25B6; per generar el taulell de mides dels datasets\n",
+        "# @title Once the institution is selected, click the &#x25B6; button to generate and download the dataset size table.\n",
         "\n",
         "from collections import defaultdict\n",
         "import pandas as pd\n",
@@ -342,97 +339,15 @@
         "      formatted_archival, unit_archival = format_size(archival_size)\n",
         "      data.append([i, sigles, original_size, archival_size, float(formatted_original.replace(',', '.')), unit_original, float(formatted_archival.replace(',', '.')), unit_archival])\n",
         "df = pd.DataFrame(data, columns=[\"DOI\",\"Institution\", \"Original Size (Bytes)\", \"Archival Size (Bytes)\",  \"Formatted Original Size\", \"Unit (Original Size)\", \"Formatted Archival Size\", \"Unit (Archival Size)\" ])\n",
-        "df\n",
-        "\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# @title Clicar el botó &#x25B6; per guardar les dades en un fitxer excel.\n",
         "from google.colab import files\n",
         "# Save the DataFrame to an Excel file\n",
-        "excel_filename = 'mida_datasets.xlsx'\n",
+        "excel_filename = 'datasets_sizes.xlsx'\n",
         "df.to_excel(excel_filename, index=False)\n",
         "\n",
         "# Provide download link for the file\n",
-        "files.download(excel_filename)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 17
-        },
-        "id": "Kg4s-N0JZ9Z4",
-        "outputId": "4cc82f60-b430-43eb-e5b8-484812481c1c",
-        "cellView": "form"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "<IPython.core.display.Javascript object>"
-            ],
-            "application/javascript": [
-              "\n",
-              "    async function download(id, filename, size) {\n",
-              "      if (!google.colab.kernel.accessAllowed) {\n",
-              "        return;\n",
-              "      }\n",
-              "      const div = document.createElement('div');\n",
-              "      const label = document.createElement('label');\n",
-              "      label.textContent = `Downloading \"${filename}\": `;\n",
-              "      div.appendChild(label);\n",
-              "      const progress = document.createElement('progress');\n",
-              "      progress.max = size;\n",
-              "      div.appendChild(progress);\n",
-              "      document.body.appendChild(div);\n",
-              "\n",
-              "      const buffers = [];\n",
-              "      let downloaded = 0;\n",
-              "\n",
-              "      const channel = await google.colab.kernel.comms.open(id);\n",
-              "      // Send a message to notify the kernel that we're ready.\n",
-              "      channel.send({})\n",
-              "\n",
-              "      for await (const message of channel.messages) {\n",
-              "        // Send a message to notify the kernel that we're ready.\n",
-              "        channel.send({})\n",
-              "        if (message.buffers) {\n",
-              "          for (const buffer of message.buffers) {\n",
-              "            buffers.push(buffer);\n",
-              "            downloaded += buffer.byteLength;\n",
-              "            progress.value = downloaded;\n",
-              "          }\n",
-              "        }\n",
-              "      }\n",
-              "      const blob = new Blob(buffers, {type: 'application/binary'});\n",
-              "      const a = document.createElement('a');\n",
-              "      a.href = window.URL.createObjectURL(blob);\n",
-              "      a.download = filename;\n",
-              "      div.appendChild(a);\n",
-              "      a.click();\n",
-              "      div.remove();\n",
-              "    }\n",
-              "  "
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "<IPython.core.display.Javascript object>"
-            ],
-            "application/javascript": [
-              "download(\"download_63b7cb49-540f-4e5d-a89e-1ea402bd3864\", \"mida_datasets.xlsx\", 5853)"
-            ]
-          },
-          "metadata": {}
-        }
+        "files.download(excel_filename)\n",
+        "df\n",
+        "\n"
       ]
     }
   ],
