--- a/dataset_size_calculator/dataset_size_calculator.ipynb
+++ b/dataset_size_calculator/dataset_size_calculator.ipynb
@@ -222,7 +222,7 @@
         "institucions = [\n",
         "    'UB', 'UAB', 'UPC', 'UPF', 'UdG', 'UdL', 'URV', 'UOC', 'UVIC-UCC',\n",
         "    'URL', 'UIC', 'UIB', 'Agrotecnio', 'CED', 'CRAG', 'CREAF', 'CRM', 'CTFC',\n",
-        "    'i2CAT', 'I3PT', 'IBEC', 'IBEI', 'ICAC-CERCA', 'ICFO-CERCA', 'ICN2',\n",
+        "    'i2CAT', 'I3PT', 'IBEC', 'IBEI', 'ICAC-CERCA', 'ICFO-CERCA','ICIQ', 'ICN2',\n",
         "    'ICRA-CERCA', 'IDIBAPS', 'IDIBELL', 'IDIBGI-CERCA', 'IFAE', 'IJC','IRSantPau','CVC','IRSJD',\n",
         "    'IPHES-CERCA', 'IRBBarcelona-CERCA', 'IRB', 'IRSICAIXA', 'IRTA',\n",
         "    'ISGLOBAL', 'VHIR'\n",
@@ -339,6 +339,19 @@
         "      formatted_archival, unit_archival = format_size(archival_size)\n",
         "      data.append([i, sigles, original_size, archival_size, float(formatted_original.replace(',', '.')), unit_original, float(formatted_archival.replace(',', '.')), unit_archival])\n",
         "df = pd.DataFrame(data, columns=[\"DOI\",\"Institution\", \"Original Size (Bytes)\", \"Archival Size (Bytes)\",  \"Formatted Original Size\", \"Unit (Original Size)\", \"Formatted Archival Size\", \"Unit (Archival Size)\" ])\n",
+        "\n",
+        "# Extract the numeric part of the DOI and convert it to int for sorting\n",
+        "df['DOI_Number'] = df['DOI'].str.extract(r'data(\\d+)').astype(int)\n",
+        "\n",
+        "# Sort the DataFrame based on the DOI_Number column\n",
+        "df = df.sort_values(by='DOI_Number')\n",
+        "\n",
+        "# Format the DOI column as 'https://doi.org/10.34810/dataXXX'\n",
+        "df['DOI'] = 'https://doi.org/10.34810/data' + df['DOI_Number'].astype(str)\n",
+        "\n",
+        "# Drop the DOI_Number column (optional)\n",
+        "df = df.drop(columns=['DOI_Number'])\n",
+        "\n",
         "from google.colab import files\n",
         "# Save the DataFrame to an Excel file\n",
         "excel_filename = 'datasets_sizes.xlsx'\n",
