--- a/create_Readme/create_Readme_script.ipynb
+++ b/create_Readme/create_Readme_script.ipynb
@@ -33,7 +33,7 @@
       },
       "outputs": [],
       "source": [
-        "# @title First click the &#x25B6; button to execute the script. </p> Then, enter the token (If you don't have your API token, you can get it from the following link <a href='https://dataverse.csuc.cat/dataverseuser.xhtml?selectTab=apiTokenTab' target='_blank'>Get API Token</a>).</p> Finally enter the LAST DIGITS of the DOI (for example, if the DOI ends in <strong>dataXYZ</strong>, only write the number <strong>XYZ</strong> ).\n",
+        "# @title First click the &#x25B6; button to execute the script. </p> Then, enter the token (If you don't have your API token, you can get it from the following link <a href='https://dataverse.csuc.cat/dataverseuser.xhtml?selectTab=apiTokenTab' target='_blank'>Get API Token</a>).</p> After that, enter the LAST DIGITS of the DOI (for example, if the DOI ends in <strong>dataXYZ</strong>, only write the number <strong>XYZ</strong> ).</p> Finally click <strong>Download Readme</strong> to download the file.\n",
         "import os\n",
         "import subprocess\n",
         "import sys\n",
@@ -48,14 +48,12 @@
         "\n",
         "    # Install the required libraries\n",
         "    subprocess.check_call([sys.executable, \"-m\", \"pip\", \"install\", \"pyDataverse\", \"-q\"])\n",
-        "    subprocess.check_call([sys.executable, \"-m\", \"pip\", \"install\", \"html2text\", \"-q\"])\n",
         "\n",
         "    print(\"Libraries have been downloaded or updated.\")\n",
         "\n",
         "# Install libraries if they are not installed already\n",
         "try:\n",
         "    import pyDataverse\n",
-        "    import html2text\n",
         "except ImportError:\n",
         "    print(\"Installing libraries...\")\n",
         "    install_packages()\n",
@@ -1283,7 +1281,7 @@
         "            if 'description' in filemetadata_keys[i]:\n",
         "                f.write('\\t'+'Decription: '+filemetadata_values[i][filemetadata_keys[i].index('description')]+'\\n')\n",
         "            f.write('\\t'+'File format: '+filemetadata_values[i][filemetadata_keys[i].index('contentType')]+'\\n\\n')\n",
-        "        print('The Readme has been created in the directory' + path +'.')\n",
+        "        print('The Readme has been created in the directory ' + path +'.')\n",
         "\n",
         "# Checking if both inputs are provided\n",
         "if not doi or not token:\n",
