--- a/dataset_size_calculator/dataset_size_calculator.ipynb
+++ b/dataset_size_calculator/dataset_size_calculator.ipynb
@@ -279,7 +279,7 @@
       },
       "outputs": [],
       "source": [
-        "# @title Once the institution is selected, click the &#x25B6; button to generate and download the dataset size table.\n",
+        "# @title Once the institution is selected, click the &#x25B6; button to generate and download the dataset size table.</p> Finally, Clic <strong>Download file</strong> button.\n",
         "\n",
         "from collections import defaultdict\n",
         "import pandas as pd\n",
@@ -353,10 +353,12 @@
         "excel_filename = 'datasets_sizes.xlsx'\n",
         "df.to_excel(excel_filename, index=False)\n",
         "\n",
-        "# Provide download link for the file\n",
-        "files.download(excel_filename)\n",
-        "df\n",
-        "\n"
+        "display(df)\n",
+        "def create_download_button(filename):\n",
+        "    return HTML(f'<a href=\"/files/{filename}\" download=\"{filename}\"><button>Download file</button></a>')\n",
+        "\n",
+        "# Display the download button\n",
+        "create_download_button(excel_filename)\n"
       ]
     }
   ],
