--- a/create_Readme/create_Readme_script.ipynb
+++ b/create_Readme/create_Readme_script.ipynb
@@ -16,7 +16,7 @@
         "id": "TDTRqrlemlLB"
       },
       "source": [
-        "# Creating README.txt\n",
+        "# Script to create a Readme file for a dataset in Dataverse\n",
         "### OBSERVATION:\n",
         "If you have doubts about the code, please contact rdr-contacte@csuc.cat\n",
         "\n",
