--- a/dataset_size_calculator/dataset_size_calculator.ipynb
+++ b/dataset_size_calculator/dataset_size_calculator.ipynb
@@ -15,7 +15,7 @@
       "source": [
         "# Script to Calculate Datasets Size of dataverses in Dataverse\n",
         "### OBSERVATION:\n",
-        "If you have doubts about the code, please contact rdr-contacte@csuc.cat\n",
+        "This script is available in the following GitHub repository: <a href='https://github.com/CSUC/RDR-scripts/tree/main/dataset_size_calculator' target='_blank'>RDR-scripts</a>. </p> If you have questions or doubts about the code, please contact rdr-contacte@csuc.cat.\n",
         "### SCRIPT OBJECTIVE:\n",
         "This script calculates the total size of a datasets hosted in a dataverse in the Research Data Repository (https://dataverse.csuc.cat/). It uses the Dataverse API to retrieve the size of all files associated with all datasets of a dataverse and returns the total size in bytes, KB, MB, or GB.\n"
       ],
