--- a/dataset_size_calculator/dataset_size_calculator.ipynb
+++ b/dataset_size_calculator/dataset_size_calculator.ipynb
@@ -279,7 +279,7 @@
       },
       "outputs": [],
       "source": [
-        "# @title Once the institution is selected, click the &#x25B6; button to generate and download the dataset size table.</p> Finally, Clic <strong>Download file</strong> button.\n",
+        "# @title Once the institution is selected, click the &#x25B6; button to generate the data.</p> Finally, Clic <strong>Download file</strong> button.\n",
         "\n",
         "from collections import defaultdict\n",
         "import pandas as pd\n",
