--- a/metrics/metrics_script.ipynb
+++ b/metrics/metrics_script.ipynb
@@ -2,79 +2,27 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
       "source": [
-        "# Script per extreure mètriques ddels datasets d'una instància"
+        "<a href=\"https://colab.research.google.com/github/CSUC/RDR-scripts/blob/main/metrics/metrics_script.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Script to Extract Metrics from Datasets in a Dataverse Instance\n",
+        "### OBSERVATION:\n",
+        "This script is available in the following GitHub repository: <a href='https://github.com/CSUC/RDR-scripts/tree/main/metrics' target='_blank'>RDR-scripts</a>. </p> If you have questions or doubts about the code, please contact rdr-contacte@csuc.cat.\n",
+        "### SCRIPT OBJECTIVE:\n",
+        "This script allows you to extract metrics from datasets in a Dataverse instance using the Dataverse API. The metrics include total views, unique views, total downloads, unique downloads, and citations."
       ],
       "metadata": {
         "id": "ii4KZzWjUUQP"
       },
       "id": "ii4KZzWjUUQP"
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "OBSERVACIÓ: Si teniu dubtes del codi, contactar amb rdr-contacte@csuc.cat"
-      ],
-      "metadata": {
-        "id": "7Q5ERdCSU_vp"
-      },
-      "id": "7Q5ERdCSU_vp"
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "## OBJECTIU DE L'SCRIPT"
-      ],
-      "metadata": {
-        "id": "IoOXurWSVBij"
-      },
-      "id": "IoOXurWSVBij"
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "L'objectiu principal d'aquest script és extreure les mètriques dels datasets d'una instància."
-      ],
-      "metadata": {
-        "id": "bYHt1XqoVEJk"
-      },
-      "id": "bYHt1XqoVEJk"
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# @title Instal·lar o actualitzar llibreries (Clicar botó d'executar &#x25B6; )\n",
-        "from google.colab import output\n",
-        "import ipywidgets as widgets\n",
-        "from IPython.display import display, HTML, clear_output\n",
-        "\n",
-        "# Function to install required packages\n",
-        "def install_packages(b):\n",
-        "    clear_output(wait=True)\n",
-        "    !pip install --upgrade pip -q\n",
-        "    !pip install pyDataverse -q\n",
-        "    !pip install numpy -q\n",
-        "    !pip install numpy pandas -q\n",
-        "    !pip install openpyxl -q\n",
-        "    print(\"S'han descarregat o actualitzat les llibreries.\")\n",
-        "\n",
-        "# Displaying installation message\n",
-        "display(HTML(\"<p style='font-size:14px;'><b>Feu clic al botó següent per instal·lar les llibreries.</b></p>\"))\n",
-        "\n",
-        "# Creating installation button\n",
-        "install_button = widgets.Button(description='Instal·lar llibreries')\n",
-        "install_button.on_click(install_packages)\n",
-        "\n",
-        "# Displaying the installation button\n",
-        "display(install_button)"
-      ],
-      "metadata": {
-        "id": "yHpmwLfg5KsC",
-        "cellView": "form"
-      },
-      "id": "yHpmwLfg5KsC",
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -86,11 +34,41 @@
       },
       "outputs": [],
       "source": [
-        "# @title Feu clic al botó Executar &#x25B6; , ompliu el token i l'alias de la institució\n",
-        "\n",
-        "import subprocess\n",
-        "import smtplib\n",
+        "# @title First click the &#x25B6; button to execute the script. </p> Then, enter the token (If you don't have your API token, you can get it from the following link <a href='https://dataverse.csuc.cat/dataverseuser.xhtml?selectTab=apiTokenTab' target='_blank'>Get API Token</a>).</p> Finally choose one or more institutions.\n",
+        "# Function to install required packages\n",
         "import os\n",
+        "import subprocess\n",
+        "import sys\n",
+        "def install_packages():\n",
+        "    \"\"\"\n",
+        "    Function to install or update necessary Python packages.\n",
+        "    \"\"\"\n",
+        "    # Upgrade pip first\n",
+        "    subprocess.check_call([sys.executable, \"-m\", \"pip\", \"install\", \"--upgrade\", \"pip\", \"-q\"])\n",
+        "\n",
+        "    # Install the required libraries\n",
+        "    subprocess.check_call([sys.executable, \"-m\", \"pip\", \"install\", \"pyDataverse\", \"-q\"])\n",
+        "\n",
+        "    print(\"Libraries have been downloaded or updated.\")\n",
+        "\n",
+        "# Install libraries if they are not installed already\n",
+        "try:\n",
+        "    import pyDataverse\n",
+        "except ImportError:\n",
+        "    print(\"Installing libraries...\")\n",
+        "    install_packages()\n",
+        "\n",
+        "try:\n",
+        "    import google.colab\n",
+        "    IN_COLAB = True\n",
+        "except ImportError:\n",
+        "    IN_COLAB = False\n",
+        "\n",
+        "from google.colab import output\n",
+        "import ipywidgets as widgets\n",
+        "from IPython.display import display, HTML, clear_output\n",
+        "\n",
+        "import smtplib\n",
         "from email.mime.multipart import MIMEMultipart\n",
         "from email.mime.base import MIMEBase\n",
         "from email import encoders\n",
@@ -183,18 +161,80 @@
         "            self.create_list_datasets(self.get_list_dataverse_children()[0])\n",
         "\n",
         "SERVER_URL = \"https://dataverse.csuc.cat\"# URL del repositori, pel PRE utilitzar https://dataverse.pre.csuc.cat/\n",
-        "token= '93104f52-1a9e-4081-b946-b5d3f48ca9fe' #token privat d'Admin, consultar-lo a la interfície de CORA.RDR\n",
         "api = NativeApi(SERVER_URL,token)\n",
         "data_api = DataAccessApi(SERVER_URL,token)\n",
         "# Configuración y ejecución\n",
         "logging.basicConfig(level=logging.INFO)\n",
         "logger = logging.getLogger(__name__)\n",
-        "token = input(\"Introduïu el vostre token i premeu enter: \")\n",
-        "alias = input(\"Introduïu l'alias de la institució: \")\n",
+        "token = input(\"Please enter your API token: \")\n",
         "config = Config(api_url=\"https://dataverse.csuc.cat/\", logger=logger, token=token)\n",
-        "processor = DatasetProcessor(config, alias)\n",
-        "processor.create_list_datasets(alias)\n",
-        "metrics_data = []\n",
+        "# List of institutions\n",
+        "institucions = [\n",
+        "    'UB', 'UAB', 'UPC', 'UPF', 'UdG', 'UdL', 'URV', 'UOC', 'UVIC-UCC',\n",
+        "    'URL', 'UIC', 'UIB', 'Agrotecnio', 'CED', 'CRAG', 'CREAF', 'CRM', 'CTFC',\n",
+        "    'i2CAT', 'I3PT', 'IBEC', 'IBEI', 'ICAC-CERCA', 'ICFO-CERCA','ICIQ', 'ICN2',\n",
+        "    'ICRA-CERCA', 'IDIBAPS', 'IDIBELL', 'IDIBGI-CERCA', 'IFAE', 'IJC','IRSantPau','CVC','IRSJD',\n",
+        "    'IPHES-CERCA', 'IRBBarcelona-CERCA', 'IRB', 'IRSICAIXA', 'IRTA',\n",
+        "    'ISGLOBAL', 'VHIR'\n",
+        "]\n",
+        "# Add an option for selecting all\n",
+        "options_institucions = ['All institutions'] + institucions\n",
+        "\n",
+        "# Create widgets for instructions and selections\n",
+        "instruction_text_institucions = widgets.HTML(\n",
+        "    value=\"<b>Choose one or more institutions:</b>\"\n",
+        ")\n",
+        "\n",
+        "# Create the widget for multiple selection of institutions\n",
+        "institucions_widget = widgets.SelectMultiple(\n",
+        "    options=options_institucions,\n",
+        "    value=[],\n",
+        "    description='Institutions:',\n",
+        "    disabled=False\n",
+        ")\n",
+        "# Function to save selected institutions and print them\n",
+        "opcions = set()\n",
+        "def save_selection_institucions(change):\n",
+        "    global opcions\n",
+        "    selected = set(change['new'])\n",
+        "\n",
+        "    if 'All institutions' in selected:\n",
+        "        opcions = set(institucions)  # Select all institutions if 'Totes les institucions' is chosen\n",
+        "    else:\n",
+        "        opcions.update(selected)  # Update the set with new selections\n",
+        "\n",
+        "    print(f\"Institutions: {list(opcions)}\")\n",
+        "\n",
+        "# Function to clear the selection and reset the institutions widget\n",
+        "def restart_selection_institucions(button):\n",
+        "    global opcions\n",
+        "    institucions_widget.value = []  # Clear the selections in the widget\n",
+        "    opcions.clear()  # Clear the global opcions set\n",
+        "    print(\"The institution selection has been restored.\")\n",
+        "\n",
+        "# Observe changes in the widget selection for institutions\n",
+        "institucions_widget.observe(save_selection_institucions, names='value')\n",
+        "\n",
+        "# Create a button to restart the selection for institutions\n",
+        "restart_button_institucions = widgets.Button(description=\"Reset institution selection\")\n",
+        "restart_button_institucions.on_click(restart_selection_institucions)\n",
+        "\n",
+        "# Display the widgets and button with instructions\n",
+        "\n",
+        "display(instruction_text_institucions, institucions_widget, restart_button_institucions)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "6c85ee67",
+      "metadata": {
+        "id": "6c85ee67",
+        "cellView": "form"
+      },
+      "outputs": [],
+      "source": [
+        "# @title Once the institution is selected, click the &#x25B6; button to generate the data.</p> Finally, Clic <strong>Download file</strong> button.\n",
         "def fetch_metric(doi, metric):\n",
         "    try:\n",
         "        url = f\"{SERVER_URL}/api/datasets/:persistentId/makeDataCount/{metric}?persistentId={doi}\"\n",
@@ -209,15 +249,21 @@
         "    except Exception as e:\n",
         "        print(f\"An error occurred while fetching {metric} for {doi}: {e}\")\n",
         "    return None\n",
-        "for i in processor.get_list_datasets():\n",
-        "    metrics_data.append({\n",
-        "        \"DOI\": i,\n",
-        "        \"Total Views\": fetch_metric(i, \"viewsTotal\"),\n",
-        "        \"Unique Views\": fetch_metric(i, \"viewsUnique\"),\n",
-        "        \"Total Downloads\": fetch_metric(i, \"downloadsTotal\"),\n",
-        "        \"Unique Downloads\": fetch_metric(i, \"downloadsUnique\"),\n",
-        "        \"Citations\": fetch_metric(i, \"citations\")\n",
-        "    })\n",
+        "for element in opcions:\n",
+        "    processor = DatasetProcessor(config, element)\n",
+        "    processor.create_list_datasets(element)\n",
+        "    sigles=element\n",
+        "    metrics_data = []\n",
+        "    for i in processor.get_list_datasets():\n",
+        "        metrics_data.append({\n",
+        "            \"DOI\": i,\n",
+        "            \"Institution\": sigles,\n",
+        "            \"Total Views\": fetch_metric(i, \"viewsTotal\"),\n",
+        "            \"Unique Views\": fetch_metric(i, \"viewsUnique\"),\n",
+        "            \"Total Downloads\": fetch_metric(i, \"downloadsTotal\"),\n",
+        "            \"Unique Downloads\": fetch_metric(i, \"downloadsUnique\"),\n",
+        "            \"Citations\": fetch_metric(i, \"citations\")\n",
+        "        })\n",
         "\n",
         "# Create a DataFrame from the metrics data\n",
         "df = pd.DataFrame(metrics_data)\n",
@@ -234,96 +280,17 @@
         "# Drop the DOI_Number column (optional)\n",
         "df = df.drop(columns=['DOI_Number'])\n",
         "\n",
-        "df"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "6c85ee67",
-      "metadata": {
-        "id": "6c85ee67",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 17
-        },
-        "cellView": "form",
-        "outputId": "daff5918-2453-43b2-c6a1-caf4df11f5f7"
-      },
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "<IPython.core.display.Javascript object>"
-            ],
-            "application/javascript": [
-              "\n",
-              "    async function download(id, filename, size) {\n",
-              "      if (!google.colab.kernel.accessAllowed) {\n",
-              "        return;\n",
-              "      }\n",
-              "      const div = document.createElement('div');\n",
-              "      const label = document.createElement('label');\n",
-              "      label.textContent = `Downloading \"${filename}\": `;\n",
-              "      div.appendChild(label);\n",
-              "      const progress = document.createElement('progress');\n",
-              "      progress.max = size;\n",
-              "      div.appendChild(progress);\n",
-              "      document.body.appendChild(div);\n",
-              "\n",
-              "      const buffers = [];\n",
-              "      let downloaded = 0;\n",
-              "\n",
-              "      const channel = await google.colab.kernel.comms.open(id);\n",
-              "      // Send a message to notify the kernel that we're ready.\n",
-              "      channel.send({})\n",
-              "\n",
-              "      for await (const message of channel.messages) {\n",
-              "        // Send a message to notify the kernel that we're ready.\n",
-              "        channel.send({})\n",
-              "        if (message.buffers) {\n",
-              "          for (const buffer of message.buffers) {\n",
-              "            buffers.push(buffer);\n",
-              "            downloaded += buffer.byteLength;\n",
-              "            progress.value = downloaded;\n",
-              "          }\n",
-              "        }\n",
-              "      }\n",
-              "      const blob = new Blob(buffers, {type: 'application/binary'});\n",
-              "      const a = document.createElement('a');\n",
-              "      a.href = window.URL.createObjectURL(blob);\n",
-              "      a.download = filename;\n",
-              "      div.appendChild(a);\n",
-              "      a.click();\n",
-              "      div.remove();\n",
-              "    }\n",
-              "  "
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "<IPython.core.display.Javascript object>"
-            ],
-            "application/javascript": [
-              "download(\"download_7f4be03a-f14c-4e6a-9aa8-d26bc0e727ef\", \"dataverse_metrics.xlsx\", 5826)"
-            ]
-          },
-          "metadata": {}
-        }
-      ],
-      "source": [
-        "# @title Clicar el botó &#x25B6; per guardar les dades en un fitxer excel.\n",
         "from google.colab import files\n",
         "# Save the DataFrame to an Excel file\n",
-        "excel_filename = 'dataverse_metrics.xlsx'\n",
+        "excel_filename = 'datasets_sizes.xlsx'\n",
         "df.to_excel(excel_filename, index=False)\n",
-        "# Provide download link for the file\n",
-        "files.download(excel_filename)"
+        "\n",
+        "display(df)\n",
+        "def create_download_button(filename):\n",
+        "    return HTML(f'<a href=\"/files/{filename}\" download=\"{filename}\"><button>Download file</button></a>')\n",
+        "\n",
+        "# Display the download button\n",
+        "create_download_button(excel_filename)"
       ]
     }
   ],
@@ -346,7 +313,8 @@
       "version": "3.9.12"
     },
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     }
   },
   "nbformat": 4,
