--- a/metrics/metrics_script.ipynb
+++ b/metrics/metrics_script.ipynb
@@ -161,12 +161,12 @@
         "            self.create_list_datasets(self.get_list_dataverse_children()[0])\n",
         "\n",
         "SERVER_URL = \"https://dataverse.csuc.cat\"# URL del repositori, pel PRE utilitzar https://dataverse.pre.csuc.cat/\n",
+        "token = input(\"Please enter your API token: \")\n",
         "api = NativeApi(SERVER_URL,token)\n",
         "data_api = DataAccessApi(SERVER_URL,token)\n",
         "# Configuración y ejecución\n",
         "logging.basicConfig(level=logging.INFO)\n",
         "logger = logging.getLogger(__name__)\n",
-        "token = input(\"Please enter your API token: \")\n",
         "config = Config(api_url=\"https://dataverse.csuc.cat/\", logger=logger, token=token)\n",
         "# List of institutions\n",
         "institucions = [\n",
@@ -285,12 +285,28 @@
         "excel_filename = 'datasets_sizes.xlsx'\n",
         "df.to_excel(excel_filename, index=False)\n",
         "\n",
+        "# Display the DataFrame\n",
         "display(df)\n",
-        "def create_download_button(filename):\n",
-        "    return HTML(f'<a href=\"/files/{filename}\" download=\"{filename}\"><button>Download file</button></a>')\n",
         "\n",
-        "# Display the download button\n",
-        "create_download_button(excel_filename)"
+        "if IN_COLAB:\n",
+        "    # Running in Google Colab\n",
+        "    # Provide a download button\n",
+        "    download_button = widgets.Button(description=\"Download file\")\n",
+        "    display(download_button)\n",
+        "\n",
+        "    # Function to be executed when the download button is clicked\n",
+        "    def on_download_button_click(b):\n",
+        "        # Download the Readme.txt file in Google Colab\n",
+        "        files.download(excel_filename)\n",
+        "\n",
+        "    # Event handler for the download button\n",
+        "    download_button.on_click(on_download_button_click)\n",
+        "\n",
+        "else:\n",
+        "    # Running in Jupyter Notebook\n",
+        "    # Provide a download link\n",
+        "    download_link = FileLink(excel_filename, result_html_prefix=\"Click to download the file: \")\n",
+        "    display(download_link)"
       ]
     }
   ],
