--- a/create_Readme/create_Readme_script.ipynb
+++ b/create_Readme/create_Readme_script.ipynb
@@ -18,8 +18,7 @@
       "source": [
         "# Script to create a Readme file for a dataset in Dataverse\n",
         "### OBSERVATION:\n",
-        "If you have doubts about the code, please contact rdr-contacte@csuc.cat\n",
-        "\n",
+        "This script is available in the following GitHub repository: <a href='https://github.com/CSUC/RDR-scripts/tree/main/related_publication_check' target='_blank'>RDR-scripts</a>. </p> If you have questions or doubts about the code, please contact rdr-contacte@csuc.cat.\n",
         "### SCRIPT OBJECTIVE:\n",
         "The main objective of this script is to automatically create the README file for a dataset.\n"
       ]
@@ -33,7 +32,7 @@
       },
       "outputs": [],
       "source": [
-        "# @title First click the &#x25B6; button to execute the script. </p> Then, enter the token (If you don't have your API token, you can get it from the following link <a href='https://dataverse.csuc.cat/dataverseuser.xhtml?selectTab=apiTokenTab' target='_blank'>Get API Token</a>).</p> After that, enter the LAST DIGITS of the DOI (for example, if the DOI ends in <strong>dataXYZ</strong>, only write the number <strong>XYZ</strong> ).</p> Finally, click <strong>Download Readme</strong> to download the file.\n",
+        "# @title First click the &#x25B6; button to execute the script. </p> Then, enter the token (If you don't have your API token, you can get it from the following link <a href='https://dataverse.csuc.cat/dataverseuser.xhtml?selectTab=apiTokenTab' target='_blank'>Get API Token</a>).</p> After that, enter the LAST DIGITS of the DOI (for example, if the DOI ends in <strong>dataXYZ</strong>, only write the number <strong>XYZ</strong> ).</p> Finally click <strong>Download Readme</strong> to download the file.\n",
         "import os\n",
         "import subprocess\n",
         "import sys\n",
