--- a/upload_files/upload_files_script.ipynb
+++ b/upload_files/upload_files_script.ipynb
@@ -2,6 +2,16 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/CSUC/RDR-scripts/blob/main/upload_files/upload_files_script.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "13318227",
       "metadata": {
         "id": "13318227"
@@ -39,51 +49,6 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "71f626fa",
-      "metadata": {
-        "cellView": "form",
-        "id": "71f626fa"
-      },
-      "outputs": [],
-      "source": [
-        "# @title Install or Update Libraries. Click the Run button &#x25B6;\n",
-        "\n",
-        "\n",
-        "import ipywidgets as widgets\n",
-        "from IPython.display import display, HTML, clear_output\n",
-        "\n",
-        "def install_packages(b):\n",
-        "    \"\"\"\n",
-        "    Function to install or update required packages.\n",
-        "\n",
-        "    Args:\n",
-        "    b : ipywidgets.Button : Button widget for installation.\n",
-        "\n",
-        "    Returns:\n",
-        "    None\n",
-        "    \"\"\"\n",
-        "    clear_output(wait=True)\n",
-        "    !pip install --upgrade pip -q\n",
-        "    !pip install pyDataverse -q\n",
-        "    !pip install numpy -q\n",
-        "    !pip install numpy pandas -q\n",
-        "    !pip install openpyxl -q\n",
-        "    print(\"Libraries downloaded or updated.\")\n",
-        "\n",
-        "# Displaying installation message\n",
-        "display(HTML(\"<p style='font-size:14px;'><b>Click the button below to install the required libraries.</b></p>\"))\n",
-        "\n",
-        "# Creating installation button\n",
-        "install_button = widgets.Button(description='Install Libraries')\n",
-        "install_button.on_click(install_packages)\n",
-        "\n",
-        "# Displaying the installation button\n",
-        "display(install_button)\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
       "id": "c0da682a",
       "metadata": {
         "cellView": "form",
@@ -91,8 +56,42 @@
       },
       "outputs": [],
       "source": [
-        "# @title Enter DOI (doi:10.34810/dataXXX), the token and the name of the excel file with the extension .xlsx and the repository URL. Click the execute button cell &#x25B6;\n",
+        "# @title Enter last digits of DOI, the token and the name of the excel file with the extension .xlsx and the repository URL. Click the execute button cell &#x25B6;\n",
         "import os\n",
+        "import subprocess\n",
+        "import sys\n",
+        "\n",
+        "# Function to install required packages\n",
+        "def install_packages():\n",
+        "    \"\"\"\n",
+        "    Function to install or update necessary Python packages.\n",
+        "    \"\"\"\n",
+        "    # Upgrade pip first\n",
+        "    subprocess.check_call([sys.executable, \"-m\", \"pip\", \"install\", \"--upgrade\", \"pip\", \"-q\"])\n",
+        "\n",
+        "    # Install the required libraries\n",
+        "    subprocess.check_call([sys.executable, \"-m\", \"pip\", \"install\", \"pyDataverse\", \"-q\"])\n",
+        "\n",
+        "    print(\"Libraries have been downloaded or updated.\")\n",
+        "\n",
+        "# Install libraries if they are not installed already\n",
+        "try:\n",
+        "    import pyDataverse\n",
+        "except ImportError:\n",
+        "    print(\"Installing libraries...\")\n",
+        "    install_packages()\n",
+        "\n",
+        "try:\n",
+        "    import google.colab\n",
+        "    IN_COLAB = True\n",
+        "except ImportError:\n",
+        "    IN_COLAB = False\n",
+        "\n",
+        "import ipywidgets as widgets\n",
+        "from IPython.display import display, FileLink\n",
+        "from google.colab import files\n",
+        "from IPython.display import display, HTML\n",
+        "\n",
         "import pandas as pd\n",
         "from pyDataverse.api import NativeApi, DataAccessApi\n",
         "from pyDataverse.models import Dataverse, Datafile\n",
@@ -103,7 +102,7 @@
         "token = \"\"  # @param {type:\"string\"}\n",
         "excel_file_name = \"\" # @param {type:\"string\"}\n",
         "base_url = 'https://dataverse.csuc.cat/'  # @param {type:\"string\"}\n",
-        "doi=identifier\n",
+        "doi='doi:10.34810/data'+identifier\n",
         "# Initialize API\n",
         "api = NativeApi(base_url, token)\n",
         "data_api = DataAccessApi(base_url, token)\n",
@@ -252,7 +251,8 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
