--- a/extract_metadata/extract_metadata_script.ipynb
+++ b/extract_metadata/extract_metadata_script.ipynb
@@ -2,6 +2,16 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/CSUC/RDR-scripts/blob/main/extract_metadata/extract_metadata_script.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "041f626a",
       "metadata": {
         "id": "041f626a"
@@ -53,47 +63,6 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "4HggBp-shqZi",
-      "metadata": {
-        "id": "4HggBp-shqZi",
-        "cellView": "form"
-      },
-      "outputs": [],
-      "source": [
-        "# @title Install or Update Libraries. Click the Run button &#x25B6;\n",
-        "import ipywidgets as widgets\n",
-        "from IPython.display import display, HTML, clear_output\n",
-        "\n",
-        "def install_packages(b):\n",
-        "    \"\"\"\n",
-        "    Function to install or update required Python libraries.\n",
-        "\n",
-        "    Args:\n",
-        "    b: Button object.\n",
-        "\n",
-        "    Returns:\n",
-        "    None\n",
-        "    \"\"\"\n",
-        "    clear_output(wait=True)\n",
-        "    !pip install --upgrade pip -q\n",
-        "    !pip install pyDataverse -q\n",
-        "    !pip install html2text -q\n",
-        "    print(\"Libraries have been downloaded or updated.\")\n",
-        "\n",
-        "# Display installation message\n",
-        "display(HTML(\"<p style='font-size:14px;'><b>Click the button below to install the libraries.</b></p>\"))\n",
-        "\n",
-        "# Create installation button\n",
-        "install_button = widgets.Button(description='Install Libraries')\n",
-        "install_button.on_click(install_packages)\n",
-        "\n",
-        "# Display the installation button\n",
-        "display(install_button)\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
       "id": "dccbe3e8",
       "metadata": {
         "cellView": "form",
@@ -101,15 +70,42 @@
       },
       "outputs": [],
       "source": [
-        "# @title Enter DOI (doi:10.34810/dataXXX), API token and the repository URL. Click the &#x25B6; button to execute cell\n",
-        "from IPython.display import display, FileLink\n",
+        "# @title Enter last digits of DOI, API token (<a href='https://dataverse.csuc.cat/dataverseuser.xhtml?selectTab=apiTokenTab' target='_blank'>Get API Token</a>) and the repository URL. Click the &#x25B6; button to execute cell\n",
+        "import os\n",
+        "import subprocess\n",
+        "import sys\n",
+        "\n",
+        "# Function to install required packages\n",
+        "def install_packages():\n",
+        "    \"\"\"\n",
+        "    Function to install or update necessary Python packages.\n",
+        "    \"\"\"\n",
+        "    # Upgrade pip first\n",
+        "    subprocess.check_call([sys.executable, \"-m\", \"pip\", \"install\", \"--upgrade\", \"pip\", \"-q\"])\n",
+        "\n",
+        "    # Install the required libraries\n",
+        "    subprocess.check_call([sys.executable, \"-m\", \"pip\", \"install\", \"pyDataverse\", \"-q\"])\n",
+        "\n",
+        "    print(\"Libraries have been downloaded or updated.\")\n",
+        "\n",
+        "# Install libraries if they are not installed already\n",
         "try:\n",
-        "    from google.colab import files\n",
-        "    import ipywidgets as widgets\n",
+        "    import pyDataverse\n",
+        "except ImportError:\n",
+        "    print(\"Installing libraries...\")\n",
+        "    install_packages()\n",
+        "\n",
+        "try:\n",
+        "    import google.colab\n",
         "    IN_COLAB = True\n",
         "except ImportError:\n",
         "    IN_COLAB = False\n",
-        "import os\n",
+        "\n",
+        "import ipywidgets as widgets\n",
+        "from IPython.display import display, FileLink\n",
+        "from google.colab import files\n",
+        "from IPython.display import display, HTML\n",
+        "\n",
         "from pyDataverse.api import NativeApi, DataAccessApi\n",
         "from pyDataverse.models import Dataverse\n",
         "import pandas as pd\n",
@@ -117,8 +113,8 @@
         "# Provide input values\n",
         "identifier = \"\"  # @param {type:\"string\"}\n",
         "token = \"\"  # @param {type:\"string\"}\n",
-        "base_url = \"https://dataverse.csuc.cat/\"  # @param {type:\"string\"}\n",
-        "doi = identifier\n",
+        "base_url = \"https://dataverse.csuc.cat/\"\n",
+        "doi = 'doi:10.34810/data'+identifier\n",
         "\n",
         "def extract_value(data_dict):\n",
         "    \"\"\"\n",
@@ -343,21 +339,12 @@
         "    excel_download_link = FileLink(excel_file, result_html_prefix=\"Click here to download metadata (Excel): \")\n",
         "    display(excel_download_link)\n"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "45447f9d",
-      "metadata": {
-        "id": "45447f9d"
-      },
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
